# ParityUtils

./: Makefile  Makefile.am  README.md  configure.ac
script/: clean.sh  clear-data.sh  demo-all.sh  prereq.sh  requirement-1.sh  requirement-2.sh  requirement-3.sh  requirement-4.sh
src/: backup  backup.c  backup.h  backup_gui.c  backup_gui.h  common.c  common.h  config.h  config.h.in  config.h.in~  metadata.c  metadata.h  parity.c  parity.h  parity_core.c  parity_core.h  restore  restore.c  restore.h  system.h  version.c
